cleaned up semantics

--- a/index.html
+++ b/index.html
@@ -6,45 +6,47 @@
   </head>
 
   <body>
-    <div class="nav">
-      <div class="logoHome">
+    <nav>
+      <logoHome>
         <a href="./index.html" class="logo"><img src="images/kr.png">
-      </div>
-      <div class="navLinks">
+      </logoHome>
+      <navLinks>
         <a href="./mywork.html">my work</a>
         <a href="./about.html">about</a>
         <a href="./resume.html">resume</a>
         <a href="./contact.html">contact</a>
-      </div>
+      </nav>
 
-
-      <div class="hero">
-        <div class="heroCopy">
+      <section>
+        <hero>
           <h1>Hi! I’m Kayla Razavi - an empathy-driven Product Manager + Designer based in San Francisco, California. <br> 👩‍🎨 ☕️ 👩‍💻 🧐 💡 👋</h1>
-        </div>
-      </div>
+        </hero>
+      </section>
 
-      <div class="featuredProjects">
-        <h3>featured projects</h3>
-      </div>
+      <section>
+        <featuredProjectsCopy>
+          <h3>featured projects</h3>
+        </featuredProjectsCopy>
 
-      <div class="featuredProject">
+      <featuredProject>
         <a href="project.html" class="project-cell">
           <img class="project-tile" src="images/smartcookie-tile.svg" alt=""/>
           <span class="tile-overlay"><span class="Smartcookie"></span></span>
         </a>
-      </div>
+      </featuredProject>
 
-      <div class="featuredProject">
+      <featuredProject>
         <a href="busybus.html" class="project-cell">
           <img class="project-tile" src="images/busybus-tile.svg" alt=""/>
           <span class="tile-overlay"><span class="BusyBus"></span></span>
         </a>
-      </div>
+      </featuredProject>
+    </section>
+
   </body>
 
   <footer>
-    <div class="footerNav">
+    <footerNav>
       <ul>
         <li>
           <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/">linkedin</a>
@@ -60,6 +62,8 @@
       </ul>
 
       <h6>ALL WORK © KAYLA RAZAVI 2019<h6>
-  </footer>
+
+  </footerNav>
+</footer>
 
 </html>
