updated html structure for project.html

--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Portfolio | Kayla Razavi</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+<head>
+  <title>Portfolio | Kayla Razavi</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-  <body>
+<body>
+  <section>
     <nav>
       <logoHome>
         <a href="./index.html" class="logo"><img src="images/kr.png">
-      </logoHome>
-      <navLinks>
-        <a href="./mywork.html">my work</a>
-        <a href="./about.html">about</a>
-        <a href="./resume.html">resume</a>
-        <a href="./contact.html">contact</a>
+        </logoHome>
+        <links>
+          <a href="./mywork.html">my work</a>
+          <a href="./about.html">about</a>
+          <a href="./resume.html">resume</a>
+          <a href="./contact.html">contact</a>
+        </links>
       </nav>
+    </section>
 
-      <section>
-        <hero>
-          <h1>Hi! I’m Kayla Razavi - an empathy-driven Product Manager + Designer based in San Francisco, California. <br> 👩‍🎨 ☕️ 👩‍💻 🧐 💡 👋</h1>
-        </hero>
-      </section>
+    <section>
+      <hero>
+        <h1>Hi! I’m Kayla Razavi - an empathy-driven Product Manager + Designer based in San Francisco, California. <br> 👩‍🎨 ☕️ 👩‍💻 🧐 💡 👋</h1>
+      </hero>
+    </section>
 
-      <section>
-        <featuredProjectsCopy>
-          <h3>featured projects</h3>
-        </featuredProjectsCopy>
+    <section>
+      <featuredProjectsCopy>
+        <h3>featured projects</h3>
+      </featuredProjectsCopy>
 
       <featuredProject>
         <a href="project.html" class="project-cell">
@@ -46,24 +49,21 @@
   </body>
 
   <footer>
-    <footerNav>
-      <ul>
-        <li>
-          <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/">linkedin</a>
-        </li>
+    <ul>
+      <li>
+        <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/">linkedin</a>
+      </li>
 
-        <li>
-          <a href="https://github.com/kaylarazavi">github</a>
-        </li>
+      <li>
+        <a href="https://github.com/kaylarazavi">github</a>
+      </li>
 
-        <li>
-          <a href="mailto:kayla.razavi@gmail.com">email</a>
-        </li>
-      </ul>
+      <li>
+        <a href="mailto:kayla.razavi@gmail.com">email</a>
+      </li>
+    </ul>
 
-      <h6>ALL WORK © KAYLA RAZAVI 2019<h6>
+    <h6>ALL WORK © KAYLA RAZAVI 2019<h6>
+    </footer>
 
-  </footerNav>
-</footer>
-
-</html>
+    </html>
