--- a/project.html
+++ b/project.html
@@ -6,35 +6,44 @@
 
 <body>
 
-  <div class="nav">
-    <div class="logoHome">
-      <a href="./index.html" class="logo"><img src="images/kr.png">
-      </div>
-      <div class="navLinks">
-        <a href="./mywork.html">my work</a>
-        <a href="./about.html">about</a>
-        <a href="./resume.html">resume</a>
-        <a href="./contact.html">contact</a>
-      </div>
+  <!-- navigation -->
+  <section>
+    <nav>
+      <logoHome>
+        <a href="./index.html" class="logo"><img src="images/kr.png">
+        </logoHome>
+        <links>
+          <a href="./mywork.html">my work</a>
+          <a href="./about.html">about</a>
+          <a href="./resume.html">resume</a>
+          <a href="./contact.html">contact</a>
+        </links>
+      </nav>
+    </section>
 
-      <!-- case study intro -->
-      <div class="intro">
+    <!-- case study intro -->
+    <section>
+      <intro>
         <h1>Smartcookie</h1>
         <h3>a student's best friend</h3>
 
-        <div class="project-mockup">
+        <project-mockup>
           <img class="smartcookie-mockup" src="images/smartcookie-mockup.svg" alt=""/>
-        </div>
+        </project-mockup>
 
-        <div class="prototype-link">
-          <a href="https://projects.invisionapp.com/d/main#/console/16252224/336979151/preview">View Prototype <p> </a>
-          </div>
-        </div>
+        <br>
+
+        <prototype-link>
+          <a href="https://projects.invisionapp.com/d/main#/console/16252224/336979151/preview">View Prototype</a>
+          </prototype-link>
+        </intro>
 
         <hr>
+      </section>
 
-        <!-- project overview -->
-        <div class="overview">
+      <!-- project overview -->
+      <section>
+        <overview>
           <h3>SUMMARY</h3>
           <p>Smartcookie is a students best friend – the one-stop-hub for ideating and organizing notes, readings, code, collaborating with classmates, and more.</p>
 
@@ -46,33 +55,38 @@
 
           <h3>DELIVERABLES</h3>
           <p>User Surveys | Personas | User Stories & Flows | Competitive Analysis | Wireframes | Branding Strategy | User Testing | Visual Design</p>
-        </div>
+        </overview>
 
         <hr>
+      </section>
 
-        <!-- problem and solution -->
-        <div class="problem-statement">
+      <!-- problem and solution -->
+      <section>
+        <problem-statement>
           <h3>PROBLEM</h3>
           <p>While there is no shortage of existing cloud-storage solutions to choose from that allow users to complete basic needs – creating, saving, organizing, and sharing content – there is a shortage of cloud-storage solutions that cater specifically to the rapidly advancing needs of students today.</p>
 
           <h3>SOLUTION</h3>
           <p>Meet Smartcookie. The note-taking platform designed with students in mind. Whether you’re studying STEM, Liberal Arts, or anything in-between – Smartcookie’s got you covered.</p>
-        </div>
+        </problem-statement>
 
         <hr>
+      </section>
 
-        <!-- research and development -->
-        <div class="r-and-d">
+      <!-- research and development -->
+      <section>
+        <r-and-d>
           <h2>research + development</h2>
 
           <h3>USER RESEARCH</h3>
           <p>My goal in the R&D phase was to validate the concept of a cloud storage platform for students. <p> I wanted to understand who our user is, what their pain points are, and how we can create a dynamic solution that not only alleviates their pain points but helps them achieve their goals. <p> From our research pool of 19 respondents, we learned that 100% of participants had utilized cloud storage services during their time as a student.</p>
 
-          <div class="sc-graph">
+          <sc-graph>
             <img class="smartcookie-graph" src="images/sc-graph.svg" alt=""/>
-          </div>
+          </sc-graph>
 
           <p>Top use case's</p>
+
           <ol>
             <li>Taking notes</li>
             <li>Collaborating and sharing content with peers</li>
@@ -80,6 +94,7 @@
           </ol>
 
           <p>Dream features that would make their lives as students easier</p>
+
           <ol>
             <li>Ability to code in-browser</li>
             <li>Ability to “pair program”</li>
@@ -96,51 +111,56 @@
           <h3>PERSONAS</h3>
           <p>Initial research revealed students as our target audience with two distinct personas with different problems falling under that identity. Students in STEM (science, technology, engineering, mathematics) and Liberal Arts.</p>
 
-          <div class="personas">
+          <personas>
             <img class="stem-persona" src="images/stem-persona.svg" alt=""/>
             <img class="la-persona" src="images/la-persona.svg" alt=""/>
-          </div>
+          </personas>
 
           <h3>USER STORIES</h3>
           <p>We leveraged research to validate which of the desired features were necessary for our demographic. This helped identify what features were &ldquo;need to have&rdquo; versus &ldquo;nice to have&rdquo; in order for us to create the MVP while addressing our users most pressing needs.</p>
 
-          <div class="user stories">
+          <user-stories>
             <img class="sc-user-stories" src="images/sc-user-stories.svg" alt=""/>
-          </div>
-        </div>
+          </user-stories>
+
+        </r-and-d>
 
         <hr>
+      </section>
 
-        <!-- visual design -->
-        <div class="visual-design">
+      <!-- visual design -->
+      <section>
+        <visual-design>
           <h2>visual design</h2>
 
           <h3>BRANDING</h3>
           <p>With an understanding of our user and their needs, I had the data I needed to begin the branding process. </p>
           <p>I started with a mind map - who does smartcookie serve? How can we bring out the best in our users to encourage them to use our platform over others?</p>
 
-          <div class="mind-map">
+          <mind-map>
             <img class="sc-mindmap" src="images/sc-mindmap.svg" alt=""/>
-          </div>
+          </mind-map>
 
           <p>Deep in student-empathy mode, I was reminded of the uncomfortable and intimidating experience of opening up a blank document agonizing over a paper you have to write or problem set that needs to be submit in a couple hours.</p>
 
-          <div class="logo-sketch">
+          <logo-sketch>
             <img class="sc-logo-sketch" src="images/sc-logo-sketch.svg" alt=""/>
-          </div>
+          </logo-sketch>
 
           <p>Smartcookie would be approachable, it would be friendly, it would validate your learning experience. We want students to feel comfortable and even excited to be using smartcookie - which is the intent behind each and every detail behind the brand. The style guide for smartcookie can be viewed <strong>here.</strong></p>
-        </div>
+        </visual-design>
 
         <hr>
+      </section>
 
-        <!-- prototyping, testing, + validation-->
-        <div class="protyping-testing-validation">
+      <!-- prototyping, testing, + validation-->
+      <section>
+        <protyping-testing-validation>
           <h2>prototyping, testing, + validation</h2>
 
-          <div class="low-fidelity-mockup">
+          <low-fidelity-mockup>
             <img class="sc-lowfidelity" src="images/sc-lowfid.svg" alt=""/>
-          </div>
+          </low-fidelity-mockup>
 
           <p>I used MarvelApp to create low-fidelity mockups which I then transferred over to InVision to begin my first round of user testing. The low-fidelity prototype can be viewed <strong>here.</strong> </p>
           <p>The goal of the initial round was to learn what was intuitive and what was not among my user group. As a result, I decided to cut the &ldquo;labeling&rdquo; feature. While all users agreed that it has a lot of potential, they also agreed it was complicated and perhaps best saved for after the MVP is done. They also expressed that the dashboard was overwhelming. </p>
@@ -149,62 +169,66 @@
           <p>In second round of usability testing, the process went rather seamlessly. All users were able to easily complete their tasks and noted that the interface was sleek, easy to use, and a platform they would recommend to a friend.</p>
 
 
-          <div class="high-fidelity-mockup">
+          <high-fidelity-mockup>
             <img class="sc-highfidelity" src="images/sc-hifid.svg" alt=""/>
-          </div>
+          </high-fidelity-mockup>
 
-          <p>The final high-fidelity prototype can be viewed <strong>here<strong>.</p>
-          </div>
+          <p>The final high-fidelity prototype can be viewed <strong>here</strong>.</p>
 
-          <hr>
+        </protyping-testing-validation>
 
-          <!-- conclusion-->
-          <div class="conclusion">
-            <h2>conclusion</h2>
+        <hr>
+      </section>
 
-            <h3>WHAT WORKED WELL?</h3>
-            <p>Users were a fan of the voice and personality of the brand. It made being on the platform enjoyable.</p>
+      <!-- conclusion-->
+      <section>
+        <conclusion>
 
-            <h3>WHAT DIDN'T WORK SO WELL?</h3>
-            <p>The labels feature was a bit too complex for an MVP and would require many iterations and time for research and testing beyond what time allowed.</p>
+          <h2>conclusion</h2>
+          <h3>WHAT WORKED WELL?</h3>
+          <p> Users were a fan of the voice and personality of the brand. It made being on the platform enjoyable.</p>
 
-            <h3>LESSONS LEARNED</h3>
-            <ol>
-              <li>Invest more time user testing, less time agonizing over perfectionism.</li>
-              <li>Loving an idea without testing it can be dangerous. When you have a vision for something, it’s easy to get so wrapped up in the idea that you just assume others will find it as intuitive as you do – but that’s usually not the case. Testing mitigates this risk of building a product you think is helping a user, but in reality only ostracizes them.</li>
-              <li>Looking to the future, I will begin my user testing earlier than at the low-fidelity mockups. Rapid prototyping can take place with paper and pen sketches and a stranger at a coffee shop.</li>
-            </ol>
+          <h3>WHAT DIDN'T WORK SO WELL?</h3>
+          <p>The labels feature was a bit too complex for an MVP and would require many iterations and time for research and testing beyond what time allowed. </p>
 
-          </div>
+          <h3>LESSONS LEARNED</h3>
 
-          <hr>
-        </body>
+          <ol>
+            <li>Invest more time user testing, less time agonizing over perfectionism.</li>
+            <li>Loving an idea without testing it can be dangerous. When you have a vision for something, it’s easy to get so wrapped up in the idea that you just assume others will find it as intuitive as you do – but that’s usually not the case. Testing mitigates this risk of building a product you think is helping a user, but in reality only ostracizes them.</li>
+            <li>Looking to the future, I will begin my user testing earlier than at the low-fidelity mockups. Rapid prototyping can take place with paper and pen sketches and a stranger at a coffee shop.</li>
+          </ol>
 
-        <footer>
+        </conclusion>
 
-          <!-- case study footer-->
-          <div class="case-study-nav">
-            <a href="#top" >back to top</a>
-            <a href="./busy-bus.html" >next project</a>
-          </div>
+        <hr>
+      </section>
+    </body>
 
+    <footer>
 
-          <div class="footerNav">
-            <ul>
-              <li>
-                <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/">linkedin</a>
-              </li>
+      <!-- case study footer-->
+      <case-study-footer>
+        <a href="#top" >back to top</a>
+        <a href="./busy-bus.html" >next project</a>
+      </case-study-footer>
 
-              <li>
-                <a href="https://github.com/kaylarazavi">github</a>
-              </li>
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/">linkedin</a>
+        </li>
 
-              <li>
-                <a href="mailto:kayla.razavi@gmail.com">email</a>
-              </li>
-            </ul>
+        <li>
+          <a href="https://github.com/kaylarazavi">github</a>
+        </li>
 
-            <h6>ALL WORK © KAYLA RAZAVI 2019<h6>
-            </footer>
+        <li>
+          <a href="mailto:kayla.razavi@gmail.com">email</a>
+        </li>
+      </ul>
 
-            </html>
+      <h6>ALL WORK © KAYLA RAZAVI 2019<h6>
+
+      </footer>
+
+      </html>
