added social icons and small changes

--- a/about.html
+++ b/about.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/flex.css">
 
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Inconsolata:400,700|Karla:400,400i,700,700i&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -18,7 +22,7 @@
 
 <section class="nav">
   <ul class="nav-container">
-    <li class="logo"<a href="./index.html" class="logo"><img src="images/kr-logo.png"></li>
+    <li> <a href="./index.html" class="logo"><img src="images/kr-logo.png"</a> </li>
       <li><a href="index.html#featured">my work</a></li>
       <li><a href="./about.html">about</a></li>
     </ul>
@@ -48,7 +52,6 @@
 
       <hr>
 
-      <br> <br>
 
 
       <!-- let's connect -->
@@ -57,24 +60,22 @@
         <lets-connect>
           <h3><strong><p>💁 Let&rsquo;s connect 💁 </strong></p></h3>
 
-          <br>
-
           <p>If you&rsquo;d like to work together or meet for coffee please do reach out using the links below!  </p>
 
-          <br>
 
           <ul class="footerLinks">
             <li>
-              <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/">linkedin</a>
+              <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/"><img src="images/linkedin-letters.svg" width="20" height="20" title="linkedin"></a>
             </li>
 
             <li>
-              <a href="https://github.com/kaylarazavi">github</a>
+              <a href="https://github.com/kaylarazavi"><img src="images/github-logo.svg" width="20" height="20" title="github"></a>
             </li>
 
             <li>
-              <a href="mailto:kayla.razavi@gmail.com">email</a>
+              <a href="mailto:kayla.razavi@gmail.com"><img src="images/envelope.svg" width="20" height="20" title="email"></a>
             </li>
+
           </ul>
 
         </lets-connect>
