--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/flex.css">
 
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Inconsolata|Karla&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Inconsolata:400,700|Karla:400,400i,700,700i&display=swap" rel="stylesheet">
 
 
 </head>
@@ -20,7 +20,7 @@
 
     <!-- nav -->
     <ul class="nav-container">
-      <li class="logo"<a href="./index.html" class="logo"><img src="images/kr-logo.png"></li>
+      <li> <a href="./index.html" class="logo"><img src="images/kr-logo.png"</a> </li>
         <li><a href="#featured">my work</a></li>
         <li><a href="./about.html">about</a></li>
       </ul>
@@ -55,19 +55,22 @@
 
     <!-- social / footer links -->
 
+
     <ul class="footerLinks">
       <li>
-        <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/">linkedin</a>
+        <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/"><img src="images/linkedin-letters.svg" width="20" height="20" title="linkedin"></a>
       </li>
 
       <li>
-        <a href="https://github.com/kaylarazavi">github</a>
+        <a href="https://github.com/kaylarazavi"><img src="images/github-logo.svg" width="20" height="20" title="github"></a>
       </li>
 
       <li>
-        <a href="mailto:kayla.razavi@gmail.com">email</a>
+        <a href="mailto:kayla.razavi@gmail.com"><img src="images/envelope.svg" width="20" height="20" title="email"></a>
       </li>
+
     </ul>
+
 
   </div>
   </body>
