--- a/project.html
+++ b/project.html
@@ -10,16 +10,23 @@
 
 
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Inconsolata|Karla&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Inconsolata:400,700|Karla:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,700,900&display=swap" rel="stylesheet">
+
+
 
 </head>
 
 <body>
   <div class="container">
 
+    <a href="">
+
+
+
   <!-- navigation -->
   <ul class="nav-container">
-    <li class="logo" <a href="./index.html" class="logo"></a> <img src="images/kr-logo.png"></li>
+    <li> <a href="./index.html" class="logo"><img src="images/kr-logo.png"</a> </li>
     <li><a href="index.html#featured">my work</a></li>
       <li><a href="./about.html">about</a></li>
     </ul>
@@ -27,13 +34,13 @@
     <!-- case study intro -->
   <section class="intro">
         <h1>Smartcookie</h1>
-        <h3>a student's best friend</h3>
+        <h2>a student's best friend</h2>
 
           <img class="smartcookie-mockup" src="images/smartcookie-mockup.svg" alt=""/>
 
         <br>
 
-          <a href="https://projects.invisionapp.com/d/main#/console/16252224/336979151/preview">View Prototype</a>
+          <a href="https://projects.invisionapp.com/share/HDPMHI5C8V5#/screens">View Prototype</a>
 
         <hr>
       </section>
@@ -70,17 +77,11 @@
 
             <img class="smartcookie-graph" src="images/sc-graph.svg" alt=""/>
 
-        <h3>Top use cases:</h3>
+            <p>Students reported that their top use cases were: taking notes / collaborating and sharing content with peers / uploading and storing content</p>
 
-          <p>Taking notes / Collaborating and sharing content with peers / Uploading and storing content<p>
+            <p> When asked what features would make their lives as students easier, they said:
+              the ability to code in-browser / ability to "pair program" / easy ways to upload and interact with content (readings, handouts, assignments)
 
-          <p>Dream features that would make their lives as students easier</p>
-
-          <ol class="dream-features">
-            <li>Ability to code in-browser</li>
-            <li>Ability to “pair program”</li>
-            <li>Easy ways to upload and interact with content (readings, assignments)</li>
-          </ol>
 
           <h3>COMPETITIVE ANALYSIS </h3>
 
@@ -116,7 +117,7 @@
 
             <img class="sc-logo-sketch" src="images/sc-logo-sketch.svg" alt=""/>
 
-          <p>Smartcookie would be approachable, it would be friendly, it would validate your learning experience. We want students to feel comfortable and even excited to be using smartcookie - which is the intent behind each and every detail behind the brand. The style guide for smartcookie can be viewed <strong>here.</strong></p>
+          <p>Smartcookie would be approachable, it would be friendly, it would validate your learning experience. We want students to feel comfortable and even excited to be using smartcookie - which is the intent behind each and every detail behind the brand. The style guide for smartcookie can be viewed <a href="https://www.figma.com/proto/GkB2i7MR83HMVgpdmSGj7r35/smartcookie-style-guide?node-id=1%3A2&viewport=380%2C378%2C0.6654099822044373&scaling=min-zoom">here.</a></p>
         <hr>
 
       <!-- prototyping, testing, + validation-->
@@ -132,7 +133,8 @@
 
             <img class="sc-highfidelity" src="images/sc-hifid.svg" alt=""/>
 
-          <p>The final high-fidelity prototype can be viewed <strong>here</strong>.</p>
+          <p>The final high-fidelity prototype can be viewed <a href="https://projects.invisionapp.com/share/HDPMHI5C8V5#/screens">here</a>
+.</p>
 
 
         <hr>
@@ -140,7 +142,9 @@
       <!-- conclusion-->
 
           <h2>conclusion</h2>
+
           <h3>WHAT WORKED WELL?</h3>
+
           <p> Users were a fan of the voice and personality of the brand. It made being on the platform enjoyable.</p>
 
           <h3>WHAT DIDN'T WORK SO WELL?</h3>
@@ -163,16 +167,17 @@
 
         <ul class="footerLinks">
           <li>
-            <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/">linkedin</a>
+            <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/"><img src="images/linkedin-letters.svg" width="20" height="20" title="linkedin"></a>
           </li>
 
           <li>
-            <a href="https://github.com/kaylarazavi">github</a>
+            <a href="https://github.com/kaylarazavi"><img src="images/github-logo.svg" width="20" height="20" title="github"></a>
           </li>
 
           <li>
-            <a href="mailto:kayla.razavi@gmail.com">email</a>
+            <a href="mailto:kayla.razavi@gmail.com"><img src="images/envelope.svg" width="20" height="20" title="email"></a>
           </li>
+
         </ul>
 
     </div>
