--- a/about.html
+++ b/about.html
@@ -83,6 +83,17 @@
 
     </div>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144027935-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-144027935-1');
+</script>
+
+
     </body>
 
     <footer>
