--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
 
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Inconsolata:400,700|Karla:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,700,900&display=swap" rel="stylesheet">
+
 
 
 </head>
@@ -38,12 +40,8 @@
       <section class="kayla-bio">
           <img class="kayla-razavi" src="images/kayla-circle.png" alt=""/>
 
-          <br> <br> <br>
+          <h3>My name is Kayla.</h3> <p>I&rsquo;m passionate about people, gamification, human-centered design, &amp; technology for the greater good. Wearer of many hats and dancer of many dances. I love to learn, listen, understand, create + put my energy and focus into meaningful work.</p>
 
-          <h3>My name is Kayla.</h3> <br>  <p>I&rsquo;m passionate about people, gamification, human-centered design, &amp; technology for the greater good. Wearer of many hats and dancer of many dances. I love to learn, listen, understand, create + put my energy and focus into meaningful work.</p>
-
-
-          <br>
 
           <p>Since receiving my Bachelor&rsquo;s in Human-Computer Interaction at UC Berkeley I&rsquo;ve had the opportunity to dip my toes in a variety of roles in a variety of verticals &mdash; from being the right-hand to a founder and CEO of a work-happiness company, to learning the in&rsquo;s and outs of sales operations at Dropbox, and currently as a Senior Product Quality Manager at Originate. <br> <br> Throughout these roles, my secret sauce has been my ability to apply interdisciplinary thinking to problem-solving.</p>
       </section>
@@ -65,20 +63,18 @@
 
           <ul class="footerLinks">
             <li>
-              <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/"><img src="images/linkedin-letters.svg" width="20" height="20" title="linkedin"></a>
+              <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/"target="_blank"><img src="images/linkedin-letters.svg" width="24" height="24" title="linkedin"></a>
             </li>
 
             <li>
-              <a href="https://github.com/kaylarazavi"><img src="images/github-logo.svg" width="20" height="20" title="github"></a>
+              <a href="https://github.com/kaylarazavi"target="_blank"><img src="images/github-logo.svg" width="24" height="24" title="github"></a>
             </li>
 
             <li>
-              <a href="mailto:kayla.razavi@gmail.com"><img src="images/envelope.svg" width="20" height="20" title="email"></a>
+              <a href="mailto:kayla.razavi@gmail.com"target="_blank"><img src="images/envelope.svg" width="24" height="24" title="email"></a>
             </li>
 
           </ul>
-
-        </lets-connect>
       </section>
 
     </div>
