--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/flex.css">
 
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Fugaz+One|Inconsolata:400,700|Karla:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,700,900&display=swap" rel="stylesheet">
 
 
 </head>
@@ -33,20 +33,20 @@
 
     <!-- featured projects -->
 
-    <section class="featured projects">
-      <h2 style="text-decoration: underline;", h2 id=#featured>featured projects</h2>
+    <section class="featured projects" id="featured">
+      <h2 style="text-decoration: underline;">featured projects</h2>
 
 
         <br> <br>
 
       <featuredProject>
-        <a href="project.html" class="project-cell">
+        <a href="project.html"target="_blank" class="project-cell">
           <img class="project-tile" src="images/smartcookie-tile.svg" alt=""/>
         </a>
       </featuredProject>
 
       <featuredProject>
-        <a href="busybus.html" class="project-cell">
+        <a href="busybus.html"target="_blank" class="project-cell">
           <img class="project-tile" src="images/busybus-tile.svg" alt=""/>
         </a>
       </featuredProject>
@@ -58,15 +58,15 @@
 
     <ul class="footerLinks">
       <li>
-        <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/"><img src="images/linkedin-letters.svg" width="20" height="20" title="linkedin"></a>
+        <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/"target="_blank"><img src="images/linkedin-letters.svg" width="24" height="24" title="linkedin"></a>
       </li>
 
       <li>
-        <a href="https://github.com/kaylarazavi"><img src="images/github-logo.svg" width="20" height="20" title="github"></a>
+        <a href="https://github.com/kaylarazavi"target="_blank"><img src="images/github-logo.svg" width="24" height="24" title="github"></a>
       </li>
 
       <li>
-        <a href="mailto:kayla.razavi@gmail.com"><img src="images/envelope.svg" width="20" height="20" title="email"></a>
+        <a href="mailto:kayla.razavi@gmail.com"target="_blank"><img src="images/envelope.svg" width="24" height="24" title="email"></a>
       </li>
 
     </ul>
