--- a/project.html
+++ b/project.html
@@ -20,10 +20,6 @@
 <body>
   <div class="container">
 
-    <a href="">
-
-
-
   <!-- navigation -->
   <ul class="nav-container">
     <li> <a href="./index.html" class="logo"><img src="images/kr-logo.png"</a> </li>
@@ -40,7 +36,7 @@
 
         <br>
 
-          <a href="https://projects.invisionapp.com/share/HDPMHI5C8V5#/screens">View Prototype</a>
+          <h4><a href="https://projects.invisionapp.com/share/HDPMHI5C8V5#/screens"target="_blank">view prototype</a></h4>
 
         <hr>
       </section>
@@ -117,7 +113,8 @@
 
             <img class="sc-logo-sketch" src="images/sc-logo-sketch.svg" alt=""/>
 
-          <p>Smartcookie would be approachable, it would be friendly, it would validate your learning experience. We want students to feel comfortable and even excited to be using smartcookie - which is the intent behind each and every detail behind the brand. The style guide for smartcookie can be viewed <a href="https://www.figma.com/proto/GkB2i7MR83HMVgpdmSGj7r35/smartcookie-style-guide?node-id=1%3A2&viewport=380%2C378%2C0.6654099822044373&scaling=min-zoom">here.</a></p>
+          <p>Smartcookie would be approachable, it would be friendly, it would validate your learning experience. We want students to feel comfortable and even excited to be using smartcookie - which is the intent behind each and every detail behind the brand. The style guide for smartcookie can be viewed
+            <a href="https://www.figma.com/proto/GkB2i7MR83HMVgpdmSGj7r35/smartcookie-style-guide?node-id=1%3A2&viewport=380%2C378%2C0.6654099822044373&scaling=min-zoom"target="_blank">here.</a></p>
         <hr>
 
       <!-- prototyping, testing, + validation-->
@@ -133,7 +130,7 @@
 
             <img class="sc-highfidelity" src="images/sc-hifid.svg" alt=""/>
 
-          <p>The final high-fidelity prototype can be viewed <a href="https://projects.invisionapp.com/share/HDPMHI5C8V5#/screens">here</a>
+          <p>The final high-fidelity prototype can be viewed <a href="https://projects.invisionapp.com/share/HDPMHI5C8V5#/screens"target="_blank">here</a>
 .</p>
 
 
@@ -167,21 +164,21 @@
 
         <ul class="footerLinks">
           <li>
-            <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/"><img src="images/linkedin-letters.svg" width="20" height="20" title="linkedin"></a>
+            <a href="https://www.linkedin.com/in/kayla-razavi-7a5085b4/"target="_blank"><img src="images/linkedin-letters.svg" width="20" height="20" title="linkedin"></a>
           </li>
 
           <li>
-            <a href="https://github.com/kaylarazavi"><img src="images/github-logo.svg" width="20" height="20" title="github"></a>
+            <a href="https://github.com/kaylarazavi"target="_blank"><img src="images/github-logo.svg" width="20" height="20" title="github"></a>
           </li>
 
           <li>
-            <a href="mailto:kayla.razavi@gmail.com"><img src="images/envelope.svg" width="20" height="20" title="email"></a>
+            <a href="mailto:kayla.razavi@gmail.com"target="_blank"><img src="images/envelope.svg" width="20" height="20" title="email"></a>
           </li>
 
         </ul>
 
     </div>
-    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144027935-1"></script>
     <script>
