fixed CSS issue

--- a/project.html
+++ b/project.html
@@ -36,7 +36,7 @@
 
         <br>
 
-          <h4><a href="https://projects.invisionapp.com/share/HDPMHI5C8V5#/screens"target="_blank">view prototype</a></h4>
+          <h4> s<a href="https://projects.invisionapp.com/share/HDPMHI5C8V5#/screens"target="_blank">view prototype</a>< /h4>
 
         <hr>
       </section>
